--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <p> I started learning programming on onemillionuzbekcoders platform almost a year ago.
     And i've learned quite a lot things so far. And i decided to develop my knowledge and to create my own website individually.
   That's why i created this. You can observe what i've learned and leave any comments or suggestions. </p>
-<p> <button> <a href="lakes.html">  "Lakes" </a> </button> </p>
+<p> <button> <a href="lakesindex.html">  "Lakes" </a> </button> </p>
   </body>
 </html><title>Home</title>
