--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     And i've learned quite a lot things so far. And i decided to develop my knowledge and to create my own website individually.
   That's why i created this. You can observe what i've learned and leave any comments or suggestions. </p>
 <p> <button> <a href="lakesindex.html">  "Lakes" </a> </button> </p>
+    <p> <button> <a href="find the flower.html">  "Flower quiz" </a> </button> </p>
   </body>
 </html><title>Home</title>
