--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      </head>
   <body>
     <h1>My first individual website</h1>
-    
+    <button> Hi! </button>
 
     <p>
     <p> <button> <a href="lakesindex.html">  "Lakes" </a> </button> </p>
