--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Something</title>
-   <button> <a href="lakesindex.html">  "Lakes" </a> </button> 
+   <button> <a href="lakesindex.html">  "Lakes" </a> </button>
+   <p> <img src="https://placebear.com/200/200" alt="A picture of a bear"> </p>
      </head>
   <body>
     <h1>My first individual website</h1>
