--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Something</title>
-   
-   
-     </head>
+  </head>
   <body>
     <h1>My first individual website</h1>
-    <button> <a href="lakesindex.html">  Lakes </a> </button>
-    <p> <img src="https://placebear.com/kmk200/200" alt="A picture of a bear"> </p>
-    <p> <button> <a href="find the flower.html">  Flower quiz </a> </button> </p>
- I started learning programming on onemillionuzbekcoders platform almost a year ago.
+    <p> I started learning programming on onemillionuzbekcoders platform almost a year ago.
     And i've learned quite a lot things so far. And i decided to develop my knowledge and to create my own website individually.
   That's why i created this. You can observe what i've learned and leave any comments or suggestions. </p>
+<p> <button> <a href="lakesindex.html">  "Lakes" </a> </button> </p>
   </body>
-</html>
+</html><title>Home</title>
