--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   </head>
   <body>
     <h1>My first individual website</h1>
-    <p> I started learning programming on onemillionuzbekcoders platform almost a year ago.
-    And i've learned quite a lot things so far. And i decided to develop my knowledge and to create my own website individually.
+    <p> I started learning programming on <a href="https://uzbekcoders.uz/">onemillionuzbekcoders</a>
+    platform almost a year ago
+    And i've learned quite a lot things so far. And i decided to develop my knowledge in the following website
+    <a href="https://www.w3schools.com">w3schools</a> and created my own website individually.
   That's why i created this. You can observe what i've learned and leave any comments or suggestions. </p>
 <p> <button> <a href="lakesindex.html">  "Lakes" </a> </button>
 <button> <a href="find the flower.html">  "Find the flower" </a> </button>
