--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 <p> <button> <a href="lakesindex.html">  "Lakes" </a> </button>
 <button> <a href="find the flower.html">  "Find the flower" </a> </button>
  </p>
+ <a href="https://t.me/Rabiya_Jannazarova"> telegram </a>
   </body>
 </html><title>Home</title>
