--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p> I started learning coding on <a href="https://uzbekcoders.uz/">onemillionuzbekcoders</a>
     platform almost a year ago.
     And I've learned quite a lot of things so far and I  decided to develop my knowledge in the following website
-  <a href="https://w3schools.com">online web tutorials</a>. Therefore, I created my own website.
+  <a href="https://www.w3schools.com">online web tutorials</a>. Therefore, I created my own website.
    You can observe what i've learned and leave any comments or suggestions. </p>
 <p> <button> <a href="lakesindex.html">  "Lakes" </a> </button>
 <button> <a href="find the flower.html">  "Find the flower" </a> </button>
