--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   </head>
   <body>
     <h1>My first individual website</h1>
-    <p> I started learning coding on <a href="https://uzbekcoders.uz/">onemillionuzbekcoders</a>
+    <p style="color:red;"> I started learning coding on <a href="https://uzbekcoders.uz/">onemillionuzbekcoders</a>
     platform almost a year ago.
     And I've learned quite a lot of things so far and I  decided to develop my knowledge in the following website
   <a href="https://www.w3schools.com">online web tutorials</a>. Therefore, I created my own website.
    You can observe what i've learned and leave any comments or suggestions. </p>
+   <br> <img src="pd.jpg" alt="personal development" width="600" height="400"> 
 <p> <button> <a href="lakesindex.html">  "Lakes" </a> </button>
 <button> <a href="find the flower.html">  "Find the flower" </a> </button>
  </p>
