--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     And I've learned quite a lot of things so far and I  decided to develop my knowledge in the following website
   <a href="https://www.w3schools.com/html/">online web tutorials</a>. Therefore, I created my own website.
    You can observe what i've learned and leave any comments or suggestions. </p>
-   <br> <img src="pd.jpg" alt="personal development" width="600" height="400">
+   <br> <img src="pd.jpg" alt="personal development" width="600px" height="400px">
 <p> <button> <a href="lakesindex.html">  "Lakes" </a> </button>
 <button> <a href="find the flower.html">  "Find the flower" </a> </button>
  </p>
- <a href="https://t.me/Rabiya_Jannazarova"> telegram </a>
+ <a href="https://t.me/"Jannazarova_Rabiya"> telegram </a>
   </body>
 </html><title>Home</title>
